refactor: replace /multiplayer/id/guesses with /multiplayer/id/end, which  also returns guesses
