# api/openapi/openapi.yaml
@@ -168,11 +168,11 @@ paths:
   /v1/multiplayer/{id}:
     $ref: "paths/multiplayer/multiplayer-{id}.yaml"
 
+  /v1/multiplayer/{id}/end:
+    $ref: "paths/multiplayer/multiplayer-{id}-end.yaml"
+
   /v1/multiplayer/{id}/round:
     $ref: "paths/multiplayer/multiplayer-{id}-round.yaml"
-
-  /v1/multiplayer/{id}/guesses:
-    $ref: "paths/multiplayer/multiplayer-{id}-guesses.yaml"
 
 components:
   securitySchemes:
